--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <p>We are excited to have you as our guest! Please follow the steps below to check in:</p>
         
         <h3> Address: Faron 146 <br> 2nd Floor with the elevator</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3185.066702559732!2d22.1132013!3d37.0320559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1361b09c2aa100b1%3A0xe46b2fcb71ba5b9f!2zzqbOsc-Bz47OvSAxNDYsIM6azrHOu86xzrzOrM-EzrEgMjQxIDAw!5e0!3m2!1sel!2sgr!4v1733149029771!5m2!1sel!2sgr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3185.066702559732!2d22.1132013!3d37.0320559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1361b09c2aa100b1%3A0xe46b2fcb71ba5b9f!2zzqbOsc-Bz47OvSAxNDYsIM6azrHOu86xzrzOrM-EzrEgMjQxIDAw!5e0!3m2!1sel!2sgr!4v1733149029771!5m2!1sel!2sgr" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>When you arrive at the building, you’ll see this entrance. </p>
         <img  src="images/Smilin eisodos.jpg" alt=" Entrance">
         <img  src="images/Entrance_Lock.jpg" alt=" Entrance">
@@ -156,7 +156,7 @@
              <h2><strong>Key Lock Code:</strong> <strong>4450</strong></h2>
             </div>      
            <br>
-           <p>SECOND FLOOR</p>
+           <p>2nd Floor</p>
            <img src="images/Tampela_Smilin.jpg">
         <h3>Hot Water</h3>
         <p>For hot water please press the button in the electrical panel and it will turn off automatically.<br>
