--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!-- Footer -->
     <div class="footer fade-in">
-        <a href="https://www.example.com" target="_blank">Perlahomes.gr</a>
+        <a href="https://www.perlahomes.gr" target="_blank">Perlahomes.gr</a>
         <p>&copy; 2025 Perla Homes. All rights reserved.</p>
     </div>
 
