--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!-- Hidden Code Box -->
             <div id="codeBox" style="display:none; padding: 10px; background-color: #0e0d0d; border: 1px solid #ccc; width: 200px; height: auto; max-width: 100%; text-align: center; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                 <p>KeyCase: <strong>4450</strong></p>
-                <p>Door Lock: <strong>4455#</strong></p>
+                <p>Bottom Door Lock: <strong>4455#</strong></p>
                 <button onclick="hideCodeBox()">Close</button>
             </div>
             
