--- a/check_in.html
+++ b/check_in.html
@@ -30,7 +30,7 @@
             <img src="images/Front Faron.jpg" id="front-door" alt="Access Code" />
         
             <h2>Key case</h2>
-            <h2>Located next to the entrance door.</h2>
+            <h2>Located next to the lower entrance door.</h2>
             <img src="images/Key Lock.jpg" id="key-lock" alt="Access Code">
             <h2>Code: 4450</h2>
 
