--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div id="wifiCodeBox" style="display:none; padding: 10px; background-color: #0e0d0d; border: 1px solid #ccc; width: 200px; height: auto; max-width: 100%; text-align: center; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                 <p> Network: <strong>Perla Homes</strong></p> <br>
                 <p> Password: <strong>Perla2023</strong></p>
-                <button onclick="hideWifiCodeBox()">Close</button>
+                <button onclick="hideWifiCodeBox()">EXIT</button>
             </div>
 
             <div class="button-item fade-in">
@@ -54,7 +54,7 @@
             <div id="codeBox" style="display:none; padding: 10px; background-color: #0e0d0d; border: 1px solid #ccc; width: 200px; height: auto; max-width: 100%; text-align: center; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                 <p>KeyCase: <strong>4450</strong></p>
                 <p>Bottom Door Lock: <strong>4455#</strong></p>
-                <button onclick="hideCodeBox()">Close</button>
+                <button onclick="hideCodeBox()">EXIT</button>
             </div>
             
             
