--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <title>Perla Homes</title>
     <link rel="stylesheet" href="main.css">
@@ -44,8 +45,21 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer fade-in">
-        <a href="https://www.example.com" target="_blank">Perlahomes.gr</a>
+   <div class="footer fade-in">
+       
+        
+        <!-- Social Media Links -->
+        <div class="social-media">
+            <a href="https://www.perlahomes.gr" target="_blank">
+                <i class="fas fa-globe social-icon"></i>
+            </a>
+            <a href="https://www.facebook.com/PerlaHomesgr/" target="_blank">
+                <i class="fab fa-facebook social-icon"></i>
+            </a>
+            <a href="https://www.instagram.com/perla.homes/?hl=el" target="_blank">
+                <i class="fab fa-instagram social-icon"></i>
+            </a>
+        </div>
         <p>&copy; 2025 Perla Homes. All rights reserved.</p>
     </div>
 
