--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </a>
             </div>
             <div class="button-item fade-in">
-                <a href="https://messinia.mobi/el">
+                <a href="https://messinia.mobi/el/article/katalumata/enoikiazomena-domatia/smilin-apartment-enoikiazomena-diamerismata/9695">
                     <img src="images/optiki-tautotita_2.jpg" alt="Mobi" class="round-btn">
                     <span style="display:block;">Tourist<br>Guide</span>
                 </a>
